other-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: shamil
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          # lifecycle:
          #   postStart:
          #     exec:
          #       command: ["/bin/sh", "-c", "sleep 30 && curl https://strikerlulu.me/shamil.sql > shamil.sql && mysql mobile_store -proot < shamil.sql "]
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mobile-store-db-volume
              mountPath: /var/lib/mysql # Replace with the path where you want to mount the PV inside the container
      volumes:
        - name: mobile-store-db-volume
          persistentVolumeClaim:
            claimName: mobile-store-db
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: shamil
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mobile-store-service
  namespace: shamil
spec:
  selector:
    app: mobile-store
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobile-store
  namespace: shamil
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/custom-http-errors: "418"
spec:
  ingressClassName: nginx
  rules:
    - host: mobile-store.k.strikerlulu.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobile-store-service
                port:
                  number: 8080
  tls:
    - hosts:
      - mobile-store.k.strikerlulu.me
      secretName: mobile-store-ingress-cert
